--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -2368,8 +2368,10 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
               <div class="tabContent-content">
                 <%- include(`${templatePath}/shared/comp_textualElements_titleParagraph`, { 
-                  subTitleFont:`h3`,
-                  subTitle:`Problem Overview:`, 
+                  descriptionType:`paragraph`,
+
+                  subTitleFont1:`h3`,
+                  subTitle1:`Problem Overview:`, 
                   paragraphFont:`h4`, 
                   paragraphTxt1:`The onboarding process for new users on the BookYourPet platform was cumbersome and unintuitive, leading to user frustration, high dropout rates, and consequently, a decrease in subscription conversions.` }) %>
                   
