--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -79,7 +79,7 @@
         hoverBorderColor:`LASO`,
         inputColor:`PWinputLH`,
         cardPwImgURL:`${websitePath}/projectImages/Cover_LASO_RXZero.png`,
-        cardPwTitle: `Shifting Focus: The Evolution of LASO to RX Zero`, 
+        cardPwTitle: `Shifting Focus: The Evolution of LASO Local & Telehealth to RX Zero`, 
         cardPwDescription:`This case study delves into LASO Health's strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.` 
         }) %>
       <%- include(`${templatePath}/shared/block_cardnPassword`, {
