--- a/templates/shared/comp_textualElements_titleParagraph.ejs
+++ b/templates/shared/comp_textualElements_titleParagraph.ejs
@@ -1,7 +1,27 @@
-<% if (typeof subTitleFont === 'undefined') { 
-    subTitleFont = ''; 
+<% if (typeof descriptionType === 'undefined') { 
+  descriptionType = ''; 
+} 
+%>
+
+
+
+
+<% if (typeof subTitleFont1 === 'undefined') { 
+    subTitleFont1 = ''; 
   } 
   %>
+<% if (typeof subTitleFont2 === 'undefined') { 
+  subTitleFont2 = ''; 
+} 
+%>
+<% if (typeof subTitle1 === 'undefined') { 
+  subTitle1 = ''; 
+} 
+%>
+<% if (typeof subTitle2 === 'undefined') { 
+  subTitle2 = ''; 
+} 
+%>
 
 <% if (typeof paragraphFont === 'undefined') { 
     paragraphFont = ''; 
@@ -23,96 +43,185 @@
   paragraphTxt4 = ''; 
 } 
 %>
+
+<% if (typeof titleColor1 === 'undefined') { 
+  titleColor1 = ''; 
+} 
+%>
+
+<% if (typeof titleColor2 === 'undefined') { 
+  titleColor2 = ''; 
+} 
+%>
+
+
+<% if (typeof listTxt1 === 'undefined') { 
+  listTxt1 = ''; 
+} 
+%>
+<% if (typeof listTxt2 === 'undefined') { 
+  listTxt2 = ''; 
+} 
+%>
+<% if (typeof listTxt3 === 'undefined') { 
+  listTxt3 = ''; 
+} 
+%>
+<% if (typeof listTxt4 === 'undefined') { 
+  listTxt4 = ''; 
+} 
+%>
+<!-- subTitleFont1 -->
 <div class="Grid-cell">
   <div class="element">
-
-    <% if (subTitleFont==='h2' ) { %>
+    <% if (subTitleFont1==='h2' ) { %>
     <h2>
-      <strong>
-        <%= subTitle %>
+      <strong class="<%= titleColor1 %>">
+        <%= subTitle1 %>
       </strong>
     </h2>
-    <% } else if (subTitleFont==='h3' ) { %>
-    <h3><strong>
-        <%= subTitle %>
+    <% } else if (subTitleFont1==='h3' ) { %>
+    <h3>
+      <strong class="<%= titleColor1 %>">
+
+        <%= subTitle1 %>
       </strong>
     </h3>
-    <% } else if (subTitleFont==='h4' ) { %>
-    <h4><strong>
-        <%= subTitle %>
+    <% } else if (subTitleFont1==='h4' ) { %>
+    <h4>
+      <strong class="<%= titleColor1 %>">
+        <%= subTitle1 %>
       </strong>
     </h4>
     <% } %>
 
 
+    <!-- subTitleFont2 -->
 
-    <% if (paragraphFont==='h2' ) { %>
+    <% if (subTitleFont2==='h2' ) { %>
     <h2>
-      <%= paragraphTxt1 %>
+      <strong class="<%= titleColor2 %>">
+        <%= subTitle2 %>
+      </strong>
     </h2>
+    <% } else if (subTitleFont2==='h3' ) { %>
+    <h3>
+      <strong class="<%= titleColor2 %>">
 
-    <h2>
-      <%= paragraphTxt2 %>
-    </h2>
-    <h2>
-      <%= paragraphTxt3 %>
-    </h2>
-    <h2>
-      <%= paragraphTxt4 %>
-    </h2>
-
-    <% } else if (paragraphFont==='h3' ) { %>
-    <h3>
-      <%= paragraphTxt1 %>
+        <%= subTitle2 %>
+      </strong>
     </h3>
-    <h3>
-      <%= paragraphTxt2 %>
-    </h3>
-    <h3>
-      <%= paragraphTxt3 %>
-    </h3>
-    <h3>
-      <%= paragraphTxt4 %>
-    </h3>
-    <% } else if (paragraphFont==='h4' ) { %>
+    <% } else if (subTitleFont2==='h4' ) { %>
     <h4>
-      <%= paragraphTxt1 %>
+      <strong class="<%= titleColor2 %>">
+        <%= subTitle2 %>
+      </strong>
     </h4>
-    <h4>
-      <%= paragraphTxt2 %>
-    </h4>
-    <h4>
-      <%= paragraphTxt3 %>
-    </h4>
-    <h4>
-      <%= paragraphTxt4 %>
-    </h4>
-    <% } else if (paragraphFont==='h5' ) { %>
-    <h5>
-      <%= paragraphTxt1 %>
-    </h5>
-    <h5>
-      <%= paragraphTxt2 %>
-    </h5>
-    <h5>
-      <%= paragraphTxt3 %>
-    </h5>
-    <h5>
-      <%= paragraphTxt4 %>
-    </h5>
-    <% } else if (paragraphFont==='h6' ) { %>
-    <h6>
-      <%= paragraphTxt1 %>
-    </h6>
-    <h6>
-      <%= paragraphTxt2 %>
-    </h6>
-    <h6>
-      <%= paragraphTxt3 %>
-    </h6>
-    <h6>
-      <%= paragraphTxt4 %>
-    </h6>
     <% } %>
+
+
+    <!-- paragraphFont -->
+    <% if (descriptionType === 'paragraph' ) { %>
+
+
+      <% if (paragraphFont==='h2' ) { %>
+      <h2>
+        <%= paragraphTxt1 %>
+      </h2>
+
+      <h2>
+        <%= paragraphTxt2 %>
+      </h2>
+      <h2>
+        <%= paragraphTxt3 %>
+      </h2>
+      <h2>
+        <%= paragraphTxt4 %>
+      </h2>
+
+      <% } else if (paragraphFont==='h3' ) { %>
+      <h3>
+        <%= paragraphTxt1 %>
+      </h3>
+      <h3>
+        <%= paragraphTxt2 %>
+      </h3>
+      <h3>
+        <%= paragraphTxt3 %>
+      </h3>
+      <h3>
+        <%= paragraphTxt4 %>
+      </h3>
+      <% } else if (paragraphFont==='h4' ) { %>
+      <h4>
+        <%= paragraphTxt1 %>
+      </h4>
+      <h4>
+        <%= paragraphTxt2 %>
+      </h4>
+      <h4>
+        <%= paragraphTxt3 %>
+      </h4>
+      <h4>
+        <%= paragraphTxt4 %>
+      </h4>
+      <% } else if (paragraphFont==='h5' ) { %>
+      <h5>
+        <%= paragraphTxt1 %>
+      </h5>
+      <h5>
+        <%= paragraphTxt2 %>
+      </h5>
+      <h5>
+        <%= paragraphTxt3 %>
+      </h5>
+      <h5>
+        <%= paragraphTxt4 %>
+      </h5>
+      <% } else if (paragraphFont==='h6' ) { %>
+      <h6>
+        <%= paragraphTxt1 %>
+      </h6>
+      <h6>
+        <%= paragraphTxt2 %>
+      </h6>
+      <h6>
+        <%= paragraphTxt3 %>
+      </h6>
+      <h6>
+        <%= paragraphTxt4 %>
+      </h6>
+      <% } %>
+
+    
+    <% } else if (descriptionType ==='list' ) { %>
+      <ul>
+        <% if (listTxt1 === '' ) { %>
+        <% } else { %>
+        <li class="listCircle"><%= listTxt1 %></li>
+        <% } %>
+  
+  
+        <% if (listTxt2 === '' ) { %>
+        <% } else { %>
+        <li class="listCircle"><%= listTxt2 %></li>
+        <% } %>
+  
+        <% if (listTxt3 === '' ) { %>
+        <% } else { %>
+        <li class="listCircle"><%= listTxt3 %></li>
+        <% } %>
+  
+  
+        <% if (listTxt4 === '' ) { %>
+        <% } else { %>
+        <li class="listCircle"><%= listTxt4 %></li>
+        <% } %>
+      </ul>
+    <% } else { %>
+
+    <% } %>
+
+
   </div>
 </div>
