--- a/html/main.css
+++ b/html/main.css
@@ -113,7 +113,7 @@
     --BYP-Teal400: #CCF8F3;
     --BYP-Teal100: #EAFCFC;
     --BYP-Teal-bg: #f5fafa;
-    /* ======================== */
+    /* =========== New | Site Wide ============= */
     --teal800: #2fa097;
     /* #448686, */
 
@@ -122,7 +122,7 @@
     --teal300: #D0ECEA;
     --teal200: #EFF9F8;
     --teal100: #fafdfd;
-    /* ======================== */
+    /* =========== New | Site Wide ============= */
 
     --seer-purpleDark: #1513A0;
 
