--- a/templates/shared/block_nav_header.ejs
+++ b/templates/shared/block_nav_header.ejs
@@ -5,8 +5,8 @@
 %>
 
 
-<% if (typeof backNoMenu === 'undefined') { 
-  backNoMenu = ''; 
+<% if (typeof backText === 'undefined') { 
+  backText = ''; 
 } 
 %>
 
@@ -49,77 +49,6 @@
 
 </header>
 
-<% } else if (type === 'withDropdown') { %>
-<nav class="header" id="header">
-  <div class="backgroundColorNav">
-    <a href="http://vickywang.me/"><img class="logo pointer" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
-    <div class="navbar">
-      <ul class="nav-menu">
-        <li class="dropdown nav-item active activeNav  marginZero"><a href="/" class="nav-link box">PROJECT</a>
-
-          <div class="dropdown-content">
-            <a href="/<%- projectUrl1 %>/">
-              <div class="cardBorder borderRadiusS">
-                <img src="<%= imgUrl1 %>" alt="<%= alt1 %>">
-                <div class="element">
-                  <h5 class="colorBlack"><%= itemTitle1 %></h5>
-                </div>
-              </div>
-            </a>
-
-            <a href="/<%- projectUrl2 %>/">
-              <div class="cardBorder borderRadiusS">
-                <img src="<%= imgUrl2 %>" alt="<%= alt2 %>">
-                <div class="element">
-                  <h5 class="colorBlack"><%= itemTitle2 %></h5>
-                </div>
-              </div>
-            </a>
-
-            <a href="/<%- projectUrl3 %>/">
-              <div class="cardBorder borderRadiusS">
-                <img src="<%= imgUrl3 %>" alt="<%= alt3 %>">
-                <div class="element">
-                  <h5 class="colorBlack"><%= itemTitle3 %></h5>
-                </div>
-              </div>
-            </a>
-
-            <a href="/<%- projectUrl4 %>/">
-              <div class="cardBorder borderRadiusS">
-                <img src="<%= imgUrl4 %>" alt="<%= alt4 %>">
-                <div class="element">
-                  <h5 class="colorBlack"><%= itemTitle4 %></h5>
-                </div>
-              </div>
-            </a>
-
-
-          </div>
-        </li>
-        </li>
-
-
-
-        <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
-        </li>
-        <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
-        </li>
-        <li class="nav-item inactive marginZero"><a href="/blog" class="nav-link box ">BLOG</a>
-        </li>
-        <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
-        </li>
-      </ul>
-
-    </div>
-    <div class="hamburger">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
-  </div>
-</nav>
-<!-- header -->
 
 <% } else if (type === 'back') { %>
 <header>
@@ -151,7 +80,7 @@
 
 </header>
 
-<% } else if (type === 'backNoMenu') { %>
+<% } else if (type === 'backText') { %>
   <header>
     <nav class="header" id="header">
       <div class="backgroundColorNav">
@@ -170,7 +99,7 @@
     </nav>
   
   </header>
-  <% } else if (type === 'lognLogo') { %>
+  <% } else if (type === 'logoText') { %>
     <header>
       <nav class="header" id="header">
         <div class="backgroundColorNav">
@@ -185,5 +114,76 @@
       </nav>
     
     </header>
-
+    <% } else if (type === 'withDropdown') { %>
+      <nav class="header" id="header">
+        <div class="backgroundColorNav">
+          <a href="http://vickywang.me/"><img class="logo pointer marginS" src="<%= websitePath %>/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+          <div class="navbar">
+            <ul class="nav-menu">
+              <li class="dropdown nav-item active activeNav  marginZero"><a href="/" class="nav-link box">PROJECT</a>
+      
+                <div class="dropdown-content">
+                  <a href="/<%- projectUrl1 %>/">
+                    <div class="cardBorder borderRadiusS">
+                      <img src="<%= imgUrl1 %>" alt="<%= alt1 %>">
+                      <div class="element">
+                        <h5 class="colorBlack"><%= itemTitle1 %></h5>
+                      </div>
+                    </div>
+                  </a>
+      
+                  <a href="/<%- projectUrl2 %>/">
+                    <div class="cardBorder borderRadiusS">
+                      <img src="<%= imgUrl2 %>" alt="<%= alt2 %>">
+                      <div class="element">
+                        <h5 class="colorBlack"><%= itemTitle2 %></h5>
+                      </div>
+                    </div>
+                  </a>
+      
+                  <a href="/<%- projectUrl3 %>/">
+                    <div class="cardBorder borderRadiusS">
+                      <img src="<%= imgUrl3 %>" alt="<%= alt3 %>">
+                      <div class="element">
+                        <h5 class="colorBlack"><%= itemTitle3 %></h5>
+                      </div>
+                    </div>
+                  </a>
+      
+                  <a href="/<%- projectUrl4 %>/">
+                    <div class="cardBorder borderRadiusS">
+                      <img src="<%= imgUrl4 %>" alt="<%= alt4 %>">
+                      <div class="element">
+                        <h5 class="colorBlack"><%= itemTitle4 %></h5>
+                      </div>
+                    </div>
+                  </a>
+      
+      
+                </div>
+              </li>
+              </li>
+      
+      
+      
+              <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box ">ARCHITECTURE</a>
+              </li>
+              <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box ">PHOTOGRAPHY</a>
+              </li>
+              <li class="nav-item inactive marginZero"><a href="/blog" class="nav-link box ">BLOG</a>
+              </li>
+              <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box ">ABOUT</a>
+              </li>
+            </ul>
+      
+          </div>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+        </div>
+      </nav>
+      <!-- header -->
+      
 <% } %>
