hamburger menu optional

--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -3414,6 +3414,8 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                 <div>
 
                   <div class="Grid Grid--gutters Grid--full">
+                    <div class="blankHXS"></div>
+
                     <%- include(`${templatePath}/shared/comp_textualElements_title`, {
                     titleColor:``,
                     titleFontSize:`h4`,
@@ -3467,6 +3469,8 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                 <div>
 
                   <div class="Grid Grid--gutters Grid--full">
+                    <div class="blankHXS"></div>
+
                     <%- include(`${templatePath}/shared/comp_textualElements_title`, {
                     titleColor:``,
                     titleFontSize:`h4`,
@@ -3477,7 +3481,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                     <div class="backgroundColorNavDEMO">
                       <a href="/" class="marginS centerVer pointer Grid--center">
                         <div class="arrow-container moveBackArrow">
-                          <div class="left-arrow GLORIFY"></div>
+                          <div class="left-arrow"></div>
                         </div>
                         <h4 class="backText">BACK</h4>
                       </a>
@@ -3511,6 +3515,8 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                 <div>
 
                   <div class="Grid Grid--gutters Grid--full">
+                    <div class="blankHXS"></div>
+
                     <%- include(`${templatePath}/shared/comp_textualElements_title`, {
                     titleColor:``,
                     titleFontSize:`h4`,
@@ -3519,7 +3525,13 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                   </div>
                   <nav class="headerDEMO" id="">
                     <div class="backgroundColorNavDEMO">
-                      <a href="http://vickywang.me/"><img class="logo pointer marginS" src="/icon/LOGO.svg" alt="VW" title="vickywang.me"></a>
+
+                      <a href="/" class="marginS centerVer pointer Grid--center">
+                        <div class="arrow-container moveBackArrow">
+                          <div class="left-arrow"></div>
+                        </div>
+                        <h4 class="backText">BACK</h4>
+                      </a>
                       <div class="navbar">
                         <a href="http://vickywang.me/"><img class="pointer widthXXS marginS" src="/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
                       </div>
@@ -3528,6 +3540,8 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
                 </div>
                 <div>
                   <div class="Grid Grid--gutters Grid--full">
+                    <div class="blankHXS"></div>
+
                     <%- include(`${templatePath}/shared/comp_textualElements_title`, {
                     titleColor:``,
                     titleFontSize:`h4`,
