--- a/templates/main.css
+++ b/templates/main.css
@@ -780,7 +780,14 @@ body::-webkit-scrollbar-thumb:hover {
 .colorAPbg {
     background-color: #E2EDFD !important;
 }
-
+.colorBgWhie {
+    background-color: var(--white);
+    margin: 0 auto;
+}
+.colorBgVW {
+    background-color: var(--teal200);
+    margin: 0 auto;
+}
 .colorBgBYP {
     background-color: var(--BYP-Teal-bg);
     margin: 0 auto;
@@ -909,6 +916,9 @@ polygon {
     background-color: #ffffff;
 }
 
+.colorVW {
+    color: var(--teal600);
+}
 .imgBorder {
     border: 1px solid var(--Grey400);
     border-radius: var(--border-radius);
